syntax = "proto3";

option java_multiple_files = true;
option java_package = "ds.hotWater";
option java_outer_classname = "hotWaterImpl";

package hotWater;

// Interface exported by the server.
service HotWaterService {
  
  rpc SetTankTemperature(desiredTankTemp) returns (TankTempConfirm) {}
  
  rpc SendUsageData(stream UsageDataRequest) returns (UsageDataResponse) {}  
}

message desiredTankTemp {
   int32 desiredTemp = 1; 
   
  }

message TankTempConfirm {
   int32 currentTankTemp = 1;
   string confirmation = 2; 
}

message UsageDataRequest {
  int32 hotWaterTemp = 1;
  int32 tankLevel = 2;
  int32 flowRate = 3;
  int32 waterPressure = 4;
}

message UsageDataResponse {
   string recommendation = 1; 
}
